Opened 13 years ago

Closed 5 years ago

#5293 closed bug (fixed)

Some settings in Appearance preflet are ignored

Reported by: damoklas Owned by: Janus
Priority: normal Milestone: R1
Component: Preferences/Appearance Version: R1/alpha1
Keywords: Cc: looncraz
Blocked By: Blocking: #4868
Platform: All

Description

Apperance prefs not work correctly. Etc. menu fonts color – it work for Bezzila, but not work for Haiku apps. And control text color not correct and other bugs.

Attachments (11)

menutxtaisarisat.png (109.2 KB ) - added by damoklas 13 years ago.
menu txt color
picture1.png (133.5 KB ) - added by damoklas 13 years ago.
picture1
Colors_picture2.png (149.2 KB ) - added by damoklas 13 years ago.
picture2
Colors_picture3.png (161.6 KB ) - added by damoklas 13 years ago.
picture3
Colors_picture4.png (167.4 KB ) - added by damoklas 13 years ago.
picture4
Colors_picture5.png (174.3 KB ) - added by damoklas 13 years ago.
picture5
Colors_picture6.png (152.3 KB ) - added by damoklas 13 years ago.
picture6
Colors_picture7.png (187.1 KB ) - added by damoklas 13 years ago.
picture7
Colors_picture8.png (158.4 KB ) - added by damoklas 13 years ago.
picture8
Menu Item Background and Text.png (55.4 KB ) - added by jscipione 12 years ago.
Screenshot showing alternative selected menu background color and selected menu text color, I am working on a patch
MenuItemSelectedBackgroundColor_1.diff (1.2 KB ) - added by jscipione 11 years ago.
Diff of just the selected menu item background color fix

Download all attachments as: .zip

Change History (37)

by damoklas, 13 years ago

Attachment: menutxtaisarisat.png added

menu txt color

comment:1 by mmadia, 13 years ago

Which version of Transmission is shown in the screenshot? Is it the Qt based one or the pre 1.0 versions for BeOS/Zeta?

in reply to:  1 comment:2 by damoklas, 13 years ago

Replying to mmadia:

Which version of Transmission is shown in the screenshot? Is it the Qt based one or the pre 1.0 versions for BeOS/Zeta?

That old (ver. ~ 0.8.0) Transmission hrev1999 + IconBar for BeOS.

in reply to:  1 comment:3 by damoklas, 13 years ago

Replying to mmadia:

Which version of Transmission is shown in the screenshot? Is it the Qt based one or the pre 1.0 versions for BeOS/Zeta?

Qt based: http://qt-haiku.ru/index.php?option=com_rokdownloads&view=file&Itemid=61&id=43:transmission-1

comment:4 by damoklas, 13 years ago

Milestone: R1R1/alpha2
Version: R1/DevelopmentR1/alpha1

Updated info from "haiku-r1a2-rc-rev36542-x86gcc2hybrid".

Settings works in color section:

  • Panel background – OK
  • Panel text – not OK (see picture1)
  • Document background – not OK (see picture2)
  • Document text – not OK (see picture3)
  • Control background – not OK (see picture4)
  • Control text – not OK (see picture5)
  • Control border – not OK (see picture6)
  • Control highlight – not OK(?) (see picture7)
  • Navigation base – OK
  • Navigation pulse – not work
  • Shine – not OK (?) (see picture8)
  • Shadow – not work
  • Menu background – OK
  • Selected menu item background – not work
  • Menu item text – not work (only in BeZillaBrowser works that)
  • Selected menu item text – not work
  • Selected menu item border – not work
  • Tooltip background – OK
  • Tooltip text - not work
  • Succsess – ?
  • Failure – ?
  • Window tab – OK
  • Window tab text – OK
  • Inactive window tab – OK
  • Inactive window tab – OK
Last edited 13 years ago by pulkomandy (previous) (diff)

by damoklas, 13 years ago

Attachment: picture1.png added

picture1

by damoklas, 13 years ago

Attachment: Colors_picture2.png added

picture2

by damoklas, 13 years ago

Attachment: Colors_picture3.png added

picture3

by damoklas, 13 years ago

Attachment: Colors_picture4.png added

picture4

by damoklas, 13 years ago

Attachment: Colors_picture5.png added

picture5

by damoklas, 13 years ago

Attachment: Colors_picture6.png added

picture6

by damoklas, 13 years ago

Attachment: Colors_picture7.png added

picture7

by damoklas, 13 years ago

Attachment: Colors_picture8.png added

picture8

comment:5 by damoklas, 13 years ago

...Tooltip text color seting work on BeZillaBrowser!

in reply to:  5 comment:6 by damoklas, 13 years ago

Replying to damoklas:

...Tooltip text color seting work on BeZillaBrowser!

sorry in WebPositive

comment:7 by pulkomandy, 12 years ago

Milestone: R1/alpha3R1
Summary: Apperance work not correctSome settings in Appearance preflet are ignored

This doesn't belong in alpha 3.

by jscipione, 12 years ago

Screenshot showing alternative selected menu background color and selected menu text color, I am working on a patch

comment:8 by diver, 11 years ago

Any news on this one?

comment:9 by jscipione, 11 years ago

Blocking: 4868 added

comment:10 by leavengood, 11 years ago

Hey John,

I'd be interested even in a work-in-progress patch which produces the alternative selected menu colors shown in your screenshot.

comment:11 by leavengood, 11 years ago

Owner: changed from darkwyrm to leavengood
Status: newin-progress

As an FYI I figured out the code to fix the menu colors and am now fleshing out the various ways colors are hard-coded or otherwise unchangeable. I'm also seeing how dark themes look. Might as well take ownership.

comment:12 by jscipione, 11 years ago

Should I commit what I've done pertaining to appearance related fixes or would that get in the way of your in-progress changes for this ticket?

comment:13 by leavengood, 11 years ago

They might get in the way. I suspect we fixed a lot of the same things though. But making these changes was useful for me to see just how things work. Could you make a patch and attach it here just so I can see if I missed anything, and just to compare our implementations?

by jscipione, 11 years ago

Diff of just the selected menu item background color fix

comment:14 by jscipione, 11 years ago

patch: 01

comment:15 by jscipione, 11 years ago

That is my patch for setting the Selected MenuItem Background Color only. I calculated either black or white text based on the background color instead of using the B_MENU_ITEM_TEXT_COLOR constant. I think in general this is a better approach although I can see how using the constant instead could be preferred.

comment:16 by leavengood, 11 years ago

OK I think mine is definitely more extensive. For example I'm making use of the setting for the menu text color (normal and selected.) While it would then be possible for a user to configure something unusable (dark on dark or whatever), that is their prerogative.

I also changed things so that the check marks, shortcuts and other menu elements were drawn in that color. I also had to fix BMenuFields to draw correctly with these settings turned on, since it hard codes the control color.

My Haiku time has been limited lately but I'll try to finish this up soon, along with my changes to allow for subpixel text rendering when the properly compiled Freetype is installed.

comment:17 by jscipione, 11 years ago

Did you get to allowing the ability to set the colors in ListViews (like the one in the Appearance Preferences itself) according to the selected and unselected menu color and text preferences?

in reply to:  17 comment:18 by leavengood, 11 years ago

Replying to jscipione:

Did you get to allowing the ability to set the colors in ListViews (like the one in the Appearance Preferences itself) according to the selected and unselected menu color and text preferences?

As you now probably know, I've committed my menu colors patch in hrev44426, but I did not yet work on making list views follow those color choices. I think it would make some sense though, at least for the selected item.

Right now StringItem (and even the custom list items in Appearances, as you noted in a TODO) hard-code black text. I think what makes the most sense for lists is making use of the document background and document text colors for most of the list, then menu selected colors for the selected items.

comment:19 by pulkomandy, 8 years ago

Owner: changed from leavengood to Janus
Status: in-progressassigned

comment:20 by Janus, 8 years ago

This is the current status of the colors in HAIKU

Color Status
Panel background OK
Panel text OK
Document background OK
Document text OK
Control background UNUSED
Control text MISUSED
Control border USED ONLY IN NotificationView notification
Control highlight USED IN locale, virtualmemory, diskprobe, notification
Control mark OK
Navigation base USED AS B_KEYBOARD_NAVIGATION_COLOR and in WorkspaceView
Navigation pulse UNUSED
Shine USED ONLY in diskprobe (ProbeView.cpp)
Shadow USED ONLY in diskprobe (ProbeView.cpp)
Menu background OK
Selected menu item background OK
Menu item text OK
Selected menu item text OK
Selected menu item border UNUSED
List background OK
Selected list item background OK
List item text OK
Selected list item text OK
Scroll bar thumb OK
Tooltip background OK
Tooltip text OK
Success USED IN WebPositive (DonwloadProgressView.cpp)
/haiku/headers/private/app/ServerReadOnlyMemory.h
/haiku/src/tests/servers/app/transformation/main.cpp
Failure SAME AS Success + /haiku/src/preferences/time/NetworkTimeView.cpp
/haiku/src/servers/notification/NotificationView.cpp
Window tab OK
Window tab text OK
Inactive window tab OK
Inactive window tab text OK
Window border OK
Inactive window border OK
Last edited 8 years ago by Janus (previous) (diff)

comment:21 by Janus, 8 years ago

What is the purpose of Control background, Control text, Control border? Now Control text is used in a arbitrary way. Navigation Pulse, Shine, Shadow, Selected menu item border?

Last edited 8 years ago by Janus (previous) (diff)

comment:22 by pulkomandy, 8 years ago

"Control" colors are supposed to be the default BControl ones. The idea is that instead of changing the color for each individual widget (button, checkbox, etc) we could set a single "control color" setting. BControlLook should then use this as the default color set for all widgets.

The pulse/shine/shadow and selected menu item borders are not used by the current look. An example mockup using more of the colors is here: http://design1st.org/tim/be/images/maui.gif

As you can see, there is a border around the menu selection ("selected menu item border"), all controls share common colors ("control background": light grey, "control text": black, "control border": also black). The navigation pulse/shine/shadow could be used to highlight the keyboard-focused button, for example.

I think the current look does not use these colors directly, and instead computes some shades itself using tint_color (for example to highlight the button under the mouse).

comment:23 by Janus, 8 years ago

Thanks, for the answer...

It would be handy to know which color to use for customer widgets. I fixed some of this glitches in #10840. This problem is noticeable using ThemeManager and Appearance.

comment:24 by diver, 7 years ago

Cc: looncraz added

This one is potentially fixed.

comment:25 by pulkomandy, 6 years ago

patch: 10

comment:26 by Janus, 5 years ago

Resolution: fixed
Status: assignedclosed

I think this is fixed, we can open a specific ticket if we will find some errors in the use of the system colors.

Note: See TracTickets for help on using tickets.