Update StyledEdit to use document background color. Style fixes.

See ticket #5293 Colors_picture2.png